src/app/components/summary/summary.css
mat-sidenav {
    padding: 5px;
    width: 355px;
}

.search-word-form {
    width: 250px;
    margin-top: 10px;
    margin-left: 10px;
    margin-right: 5px;
}

mat-sidenav-container {
    min-height: calc(100vh - 64px)
}

.summary-card-title {
    width: 220px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.summary-card.mat-card {
    overflow: hidden;
    margin: 10px;
    transition: all 0.5s ease;
    box-shadow:2px 2px 5px;
    border:0 solid #000;
    display: block;
    width: 260px;
}

.summary-card:hover {
    background-color: rgba(27, 27, 202, 0.15);

}

.summary-card-active {
    background-color: rgba(27, 27, 202, 0.3);
}

.summary-card-tag {
    font-size: 65%;
    border-radius: 5px;
    padding: 1px 5px 1px 5px;
    margin-right: 3px;
    color: antiquewhite;
    border: 1px outset;
    background-color: cornflowerblue;
}

.card-hashkey-text {
    color: gray;
    font-size: 80%;
}

.card-retry-text {
    color: gray;
    font-size: 80%;
}

.hashkey-text {
    color: gray;
    font-size: 50%;
}

.retry-text {
    color: gray;
    font-size: 50%;
}

.sidebar {
    background-color: #3f51b5;
    color: darkgray;
    padding-right: 10px;
    min-height: calc(100vh - 64px)
}

.check-status {
    transform: rotate(25deg) translate(36px, -4px);
    position: absolute;
    top: 0;
    right: 0;
    width: 150px;
    height: 20px;
    line-height: 20px;
    color: white;
    font-size: 12px;
    text-align: center;
}

mat-select {
    position: absolute;
    z-index: 2;
    opacity: 0;
    top: 0;
    right: 0;
    width: 150px;
    height: 20px;
    line-height: 20px;
}

.check-status.todo {
    background: rgba(255, 0, 0, 0.75);
}

.check-status.looking {
    background: rgba(113, 130, 0, 0.4);
}

.check-status.looked {
    background: rgba(16, 97, 200, 0.75);
}

.check-status.confirming {
    background: rgba(113, 130, 0, 0.4);
}

.check-status.confirmed {
    background: rgba(70, 180, 0, 0.75);
}

.check-status.creating-issue {
    background: rgba(113, 130, 0, 0.4);
}

.check-status.closed {
    background: rgba(54, 68, 60, 0.4);
}

